[package]
name = "librustdrivechain"
version = "0.0.1"
authors = [ "Nikita Chashchinskii <nikita.chashchinskii@gmail.com>" ]


[lib]
name = "rustdrivechain"
crate-type = ["staticlib"]

[dependencies]
drivechain-cpp = { git = "https://github.com/nchashch/drivechain-cpp", rev = "a241c5c9176d1a7ae9901a5cb29f9cb73b90caa9" }
