[package]
name = "librustdrivechain"
version = "0.0.1"
authors = [ "Nikita Chashchinskii <nikita.chashchinskii@gmail.com>" ]


[lib]
name = "rustdrivechain"
crate-type = ["staticlib"]

[dependencies]
drivechain-cpp = { git = "https://github.com/nchashch/drivechain-cpp", rev = "f7bff36d343aba01e22c64179faebd28bdb88c21" }

