[package]
name = "librustdrivechain"
version = "0.0.1"
authors = [ "Nikita Chashchinskii <nikita.chashchinskii@gmail.com>" ]


[lib]
name = "rustdrivechain"
crate-type = ["staticlib"]

[dependencies]
drivechain-cpp = { git = "https://github.com/nchashch/drivechain-cpp", rev = "90707460ec671349796bb63c47ee723e1f157740" }
